--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -4,12 +4,6 @@
 
     <%= f.label "Name:" %>
     <%= f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
-    <%# f.label "Name:" %>
-    <%# f.text_field :name, data: {autocomplete_source: Product.all.order(:name).map(&:name)} %>
-    <%# f.label "Time:" %>
-    <%# f.text_field :unit_of_time_period %>
-    <%# f.label "Date of Expiration:" %>
-    <%# f.text_field :exp_date , :id => "datepicker" %>
     <div class = "light well">
 
         <%= f.label :product_details %>
@@ -49,15 +43,15 @@
     </div>
   </div>
   <div class="field">
-    <h2>Recipient</h2>
-  <%= f.fields_for(:recipients, Recipient.new) do |recipient_field| %>
-     <%= recipient_field.label :name %>
-     <%= recipient_field.text_field :name %>
-     <%= recipient_field.label :email %>
-     <%= recipient_field.text_field :email %>
-     <%= recipient_field.label :phone_number %>
-     <%= recipient_field.text_field :phone_number %>
-  <% end%>
+ <!--    <h2>Recipient</h2> -->
+  <%# f.fields_for(:recipients, Recipient.new) do |recipient_field| %>
+     <%# recipient_field.label :name %>
+     <%# recipient_field.text_field :name %>
+     <%# recipient_field.label :email %>
+     <%# recipient_field.text_field :email %>
+     <%# recipient_field.label :phone_number %>
+     <%# recipient_field.text_field :phone_number %>
+  <%# end%>
 </div>
 
     <%= f.submit "Add Item", class: "btn btn-info round2" %>
