--- a/app/views/user_added_products/new.html.erb
+++ b/app/views/user_added_products/new.html.erb
@@ -16,7 +16,7 @@
         <%= f.select(:unit_of_time_period, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br> 
 
     		<%= f.label "Date of Expiration:" %>
-            <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
+        <%#= link_to "Product has it's own expiration date",id: "ownExpDate" %>
     		<%= f.text_field :exp_date , :id => "datepicker" %> <img src="fa-calendar.png" /> 
         
         <%= f.label :storage, "Storage:" %>
@@ -31,13 +31,13 @@
     <%= f.check_box(:sms) %>
     <%= f.label(:sms, "Notify me by text message") %>
 
-    <%#= radio_button_tag(:notify_day) %>
-    <%#= label_tag(:day_of, "Notify me on the expiration date.") %> <br>
+    <%= radio_button_tag(:day_of?, "Default notification date") %>
+    <%= label_tag(:default_notification, "Notify me on the expiration date.") %>
+    <%= radio_button_tag(:day_of?, "Specific notification date") %>
+    <%= label_tag(:specific_notification, "Notify me before the expiration date.") %>
 
-    <%#= radio_button_tag(:notify_day, "before") %>
-    <%#= label_tag(:notify_before, "Notify me BEFORE the expiration date.") %>
-
-    <%#= select_tag(:notify_num, options_for_select(1..7)) %>
+    <%#= Turn this into a form appended in javascript. 
+    select_tag(:notify_num, options_for_select(1..7)) %>
     <%#= select_tag(:notify_date_type, options_for_select(["Day(s)", "Week(s)", "Month(s)", "Year(s)" ])) %> <br >
 
     <div id="add_ppl">
